--- a/aerospike-server/aerospike.template.conf
+++ b/aerospike-server/aerospike.template.conf
@@ -67,14 +67,14 @@ namespace ${NAMESPACE} {
 	memory-size ${MEM_GB}G
 	default-ttl ${DEFAULT_TTL} # 5 days, use 0 to never expire/evict.
 
-	#	storage-engine memory
+	storage-engine memory
 
 	# To use file storage backing, comment out the line above and use the
 	# following lines instead.
 
-	storage-engine device {
-		file /opt/aerospike/data/test.dat
-		filesize ${STORAGE_GB}G
-		data-in-memory true # Store data in memory in addition to file.
-	}
+	# storage-engine device {
+	# 	file /opt/aerospike/data/test.dat
+	# 	filesize ${STORAGE_GB}G
+	# 	data-in-memory true # Store data in memory in addition to file.
+	# }
 }
