--- a/activemq/docker-compose.yml
+++ b/activemq/docker-compose.yml
@@ -2,11 +2,13 @@ version: "3"
 
 services:
   activemq:
-    build: .
-    image: "aaronchenwei/activemq:5.17.2"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: "aaronchenwei/activemq:5.17.3"
     container_name: "activemq"
     ports:
       - 61616:61616
     volumes:
-      - ./data/activemq/data:/data/activemq
-      - ./data/activemq/log:/var/log/activemq
+      - ./volumes/activemq/data:/data/activemq
+      - ./volumes/activemq/log:/var/log/activemq
