--- a/jupyter-notebook/5/compose.yaml
+++ b/jupyter-notebook/5/compose.yaml
@@ -1,15 +1,20 @@
 version: "3"
 
+volumes:
+  work:
+
 services:
   scipy-jupyter:
-    image: jupyter/scipy-notebook:python-3.10
-    hostname: scipy-notebook
+    image: docker.io/jupyter/scipy-notebook:${TAG:-python-3.10}
+    container_name: jupyter
     user: root
     restart: unless-stopped
+    network_mode: bridge
+    hostname: jupyter
     ports:
       - 8888:8888
     environment:
       - JUPYTER_TOKEN=easytoken
       - GRANT_SUDO=yes
     volumes:
-      - ./volumes/work:/home/jovyan/work
+      - work:/home/jovyan/work
