--- a/cassandra/1/compose.yaml
+++ b/cassandra/1/compose.yaml
@@ -1,13 +1,13 @@
-version: '2'
+version: "2"
 
 services:
   cassandra:
     image: docker.io/bitnami/cassandra:4.0
     ports:
-      - '7000:7000'
-      - '9042:9042'
+      - "7000:7000"
+      - "9042:9042"
     volumes:
-      - 'cassandra_data:/bitnami'
+      - "cassandra_data:/bitnami"
     environment:
       - CASSANDRA_SEEDS=cassandra
       - CASSANDRA_PASSWORD_SEEDER=yes
