--- a/memgraph/1/compose.yaml
+++ b/memgraph/1/compose.yaml
@@ -14,12 +14,13 @@ services:
       - mg_log:/var/log/memgraph
       - mg_etc:/etc/memgraph
     environment:
-      - TZ=Asia/Shanghai
-      - MALLOC_ARENA_MAX=2
       - MEMGRAPH="--log-level=TRACE"
     entrypoint: ["/usr/bin/supervisord"]
 
 volumes:
   mg_lib:
+    driver: local
   mg_log:
+    driver: local
   mg_etc:
+    driver: local
