--- a/janusgraph/compose.yaml
+++ b/janusgraph/compose.yaml
@@ -3,7 +3,9 @@ version: "3"
 services:
   janusgraph:
     image: docker.io/janusgraph/janusgraph:latest
-    container_name: janusgraph-default
+    container_name: janusgraph
+    hostname: janusgraph
+    network_mode: bridge
     ports:
       - "8182:8182"
     # The mounted volume only makes sense if JanusGraph is being run with the BerekeleyDB storage.
@@ -12,3 +14,4 @@ services:
 
 volumes:
   janusgraph:
+    driver: local
